--- a/privacy.html
+++ b/privacy.html
@@ -10,14 +10,14 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="main.css">
   <link rel="shortcut icon" href="https://s3-us-west-2.amazonaws.com/vested/favicon.png">
-  <!-- <link href="https://fonts.googleapis.com/css?family=Baloo+2|Montserrat:400,800,900&display=swap" rel="stylesheet"> -->
+  <link href="https://fonts.googleapis.com/css?family=Baloo+2|Montserrat:400,800,900&display=swap" rel="stylesheet">
   <title>privacy</title>
 </head>
 <body>
 <div class="img-heading sticky-top">
   <div class="container">
     <div style="padding-top: 8px;">
-      <a href="/"><img src="https://s3-us-west-2.amazonaws.com/vestedwellness/logo-vested.png" alt="Lamp" height="22"></a>
+      <a class="navbar-brand" href="#"><img src="https://vested-app.s3.amazonaws.com/logo-pk.png" alt="Lamp" height="36" style="padding-bottom: 8px"></a>
       <a role="button" href="javascript:history.back()" class="btn btn-light btn-sm float-right"> 👈 Go Back</a>
     </div>
   </div>
