--- a/privacy.html
+++ b/privacy.html
@@ -17,16 +17,16 @@
 <div class="img-heading sticky-top">
   <div class="container">
     <div style="padding-top: 8px;">
-      <a class="navbar-brand" href="#"><img src="https://vested-app.s3.amazonaws.com/logo-pk.png" alt="Lamp" height="21" style="padding-bottom: 8px"></a>
-      <a role="button" href="javascript:history.back()" class="btn btn-light btn-sm float-right"> 👈 Go Back</a>
+			<a href="/"><img src="https://vested-app.s3.amazonaws.com/logo-pk.png" alt="Lamp" height="22"></a>
+      <a role="button" href="javascript:history.back()" class="btn btn-dark btn-sm float-right"> 👈 Go Back</a>
     </div>
   </div>
 </div>
 
 <div class="container">
 	<h2>Privacy Policy</h2>
-  <footer class="spacing-bottom-med">(Last Updated: April 20, 2020)</footer>
-  <h4>General</h4>
+  <footer>(Last Updated: April 20, 2020)</footer>
+  <h4 class="spacing-top">General</h4>
   <p><em>vested</em> (“we,” “us” and/or “our”) is dedicated to protecting your personal information and informing you about how we use it. This privacy policy (the “Privacy Policy” or the “Policy”) is intended to provide information to our visitors (“you,” “your”) about how we collect, protect, share and use your information as part of our technology platforms, including, without limitation, our company website (the “Site”), mobile sites and/or applications (together with the Site, the “Services”). This Privacy Policy outlines how and when <em>vested</em> collects, protects, shares, and uses information that can identify you individually (“Personal Information”), such as your name, email, telephone number, employment information, or payment information (such as paycheck information, account information or debit card numbers). Personal Information does not include information that is anonymous, aggregated, or can no longer be used to identify you as an individual. Please be sure to read this entire Privacy Policy before using or submitting information through the Services. By using or submitting information through the Services, you are indicating that you agree to be bound by the terms of this Privacy Policy. This Privacy Policy is incorporated into <em>vested</em>’s Terms of Service at&nbsp;https://vestedapp.com/terms. Any capitalized term that is not defined in this Policy shall have the meaning given to it in the Terms of Service. This Privacy Policy covers the privacy practices of <em>vested</em> only. This Policy does not apply to the practices of third-party websites, services or applications, including third parties with which we partner. These third-party services are governed by each such third-party’s privacy policy. <em>vested</em> is not responsible for the privacy policies and practices of technology platforms other than that of <em>vested</em>, and <em>vested</em> is not responsible for the failure of unaffiliated third parties to honor their privacy obligations.</p>
 
   <h4>How We Use Information</h4>
