--- a/terms.html
+++ b/terms.html
@@ -17,16 +17,16 @@
 <div class="img-heading sticky-top">
   <div class="container">
     <div style="padding-top: 8px;">
-			<a class="navbar-brand" href="#"><img src="https://vested-app.s3.amazonaws.com/logo-pk.png" alt="Lamp" height="21" style="padding-bottom: 8px"></a>
-      <a role="button" href="javascript:history.back()" class="btn btn-light btn-sm float-right"> 👈 Go Back</a>
+			<a href="/"><img src="https://vested-app.s3.amazonaws.com/logo-pk.png" alt="Lamp" height="22"></a>
+      <a role="button" href="javascript:history.back()" class="btn btn-dark btn-sm float-right"> 👈 Go Back</a>
     </div>
   </div>
 </div>
 
 <div class="container">
 	<h2>Terms</h2>
-	<footer class="spacing-bottom-med">(Last Updated: April 20, 2020)</footer>
-	<p>This is an explanation of the things you should know about using <em>vested</em>, a service provided by <em>vested</em>. We have tried to make it as clear and straightforward as possible, because that is how we would want to be treated. If you find anything in here confusing, please let us know by contacting us at team@vestedapp.com.</p>
+	<footer>(Last Updated: April 20, 2020)</footer>
+	<p class="spacing-top">This is an explanation of the things you should know about using <em>vested</em>, a service provided by <em>vested</em>. We have tried to make it as clear and straightforward as possible, because that is how we would want to be treated. If you find anything in here confusing, please let us know by contacting us at team@vestedapp.com.</p>
 
   <h4>Acceptance of Terms</h4>
 	<p>These are the Terms governing your use of the services provided to you through the <em>vested</em> application, websites and software, including content, updates, and new releases (collectively, the "Services"). By signing up for <em>vested</em>, using the <em>vested</em> application  or visiting the <em>vested</em> website (www.vestedapp.com), you understand and agree to the Terms outlined here. You also agree to our privacy policy (www.vestedapp.com/privacy). The term “Services” includes the websites, services, features, content or applications offered by <em>vested</em>, as part of <em>WellnessLabs</em>, and “Content” includes any information, data, text, images, content, materials, software, and features generated, provided or otherwise made accessible on or through the Services.</p>
