--- a/privacy.html
+++ b/privacy.html
@@ -92,34 +92,12 @@
   <em>vested</em> may revise this Policy from time to time without prior notice to you, and any changes will be effective immediately upon the posing of the revised Privacy Policy within the Services. You should bookmark and periodically review this page to ensure that you are familiar with the most current version of this Policy. You can determine when this Policy was last revised by checking the “Last Revised” legend at the top of the Policy.</p>
 
   <h4>How can you ask questions about this Policy?</h4>
-  <p>If you have any questions or concerns about this Policy, please contact us at:</p>
-  <pre><code>
-  team@vestedapp.com
-  </code></pre>
+  <p>
+    If you have any questions or concerns about this Policy, please contact us at: team@vestedapp.com
+  </p>
 
   <div class="spacing-top">
     <div class="divider"></div>
-
-		<!-- Modal -->
-		<div class="modal" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-			<div class="modal-dialog" role="document">
-				<div class="modal-content">
-					<div class="modal-header">
-						<h5 class="modal-title" id="exampleModalLabel">Contact Us</h5>
-						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-							<span aria-hidden="true">&times;</span>
-						</button>
-					</div>
-					<div class="modal-body">
-            <p>Reach out to us via email:</p>
-            <p><a href="mailto:team@vestedapp.com">team@vestedapp.com<a/></p>
-					</div>
-					<div class="modal-footer">
-						<button type="button" class="btn btn-light" data-dismiss="modal">Close</button>
-					</div>
-				</div>
-			</div>
-		</div>
 
 		<div class="py-3">
 			<span style="font-size: 12px; opacity: 0.5;">©2019 <em>vested</em> All rights reserved.</span>
