--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ml-auto">
             <a class="nav-item nav-link" href="#">Get the app<span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="mailto:team@getvestedapp.com?subject=Hi, vested team">Contact</a>
+            <a class="nav-item nav-link" href="mailto:team@vestedapp.com?subject=Hi, vested team">Contact</a>
             <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true">News</a>
           </div>
         </div>
