--- a/privacy.html
+++ b/privacy.html
@@ -11,14 +11,14 @@
   <link rel="stylesheet" type="text/css" href="main.css">
   <link rel="shortcut icon" href="https://s3-us-west-2.amazonaws.com/vested/favicon.png">
   <link href="https://fonts.googleapis.com/css?family=Baloo+2|Montserrat:400,800,900&display=swap" rel="stylesheet">
-  <title>privacy</title>
+  <title>Privacy</title>
 </head>
 <body>
 <div class="img-heading sticky-top">
   <div class="container">
     <div style="padding-top: 8px;">
 			<a href="/"><img src="https://vested-app.s3.amazonaws.com/logo-pk.png" alt="Lamp" height="22"></a>
-      <a role="button" href="javascript:history.back()" class="btn btn-dark btn-sm float-right"> 👈 Go Back</a>
+      <!-- <a role="button" href="javascript:history.back()" class="btn btn-dark btn-sm float-right"> 👈 Go Back</a> -->
     </div>
   </div>
 </div>
