--- a/terms.html
+++ b/terms.html
@@ -10,15 +10,15 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="main.css">
   <link rel="shortcut icon" href="https://s3-us-west-2.amazonaws.com/vested/favicon.png">
-    <link href="https://fonts.googleapis.com/css?family=Baloo+2|Montserrat:400,800,900&display=swap" rel="stylesheet">
-  <title>terms</title>
+  <link href="https://fonts.googleapis.com/css?family=Baloo+2|Montserrat:400,800,900&display=swap" rel="stylesheet">
+  <title>Terms</title>
 </head>
 <body>
 <div class="img-heading sticky-top">
   <div class="container">
     <div style="padding-top: 8px;">
 			<a href="/"><img src="https://vested-app.s3.amazonaws.com/logo-pk.png" alt="Lamp" height="22"></a>
-      <a role="button" href="javascript:history.back()" class="btn btn-dark btn-sm float-right"> 👈 Go Back</a>
+      <!-- <a role="button" href="javascript:history.back()" class="btn btn-dark btn-sm float-right"> 👈 Go Back</a> -->
     </div>
   </div>
 </div>
