--- a/faq.html
+++ b/faq.html
@@ -120,14 +120,14 @@
           <div class="card-header" id="headingSix">
             <h2 class="mb-0">
               <button class="btn btn-link collapsed font-blue" type="button" data-toggle="collapse" data-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix" style="white-space: normal; text-align: left; text-decoration: none;">
-                Can your employer see financial or personal information?
+                What if you share a joint or spouse account?
               </button>
             </h2>
           </div>
           <div id="collapseSix" class="collapse" aria-labelledby="headingSix" data-parent="#accordionExample">
             <div class="card-body">
               <p>
-                No. We never share financial data or personally identifiable data with third parties or your employer, ever.
+                Joint or spouse accounts are still your assets. So if you and your significant other have a joint account and one of you adds $500 that you were not expecting, that’s good news for your goal. You are also penalized if one of you withdraws without you expecting it.
               </p>
             </div>
           </div>
