--- a/faq.html
+++ b/faq.html
@@ -41,7 +41,7 @@
           <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
             <div class="card-body">
               <p>
-                <em>vested</em> is a mobile app designed to help you set goals and save money for the things you care about. We learn about your finances, recommend a goal that is within your reach, and help you reach it one month at a time. As a bonus, we reward you with gift cards when you reach your goals.
+                <em>vested</em> is a mobile app designed to help you set goals and save money for the things you care about. We learn about your finances, recommend a goal that is within your reach, and help you reach it one month at a time.
               </p>
             </div>
           </div>
@@ -58,7 +58,7 @@
           <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
             <div class="card-body">
               <p>
-                If you are in debt and want to get yourself out, <em>vested</em> is right for you. If you are debt–free and want to make the most of your extra earnings and save up for something important, you you are in the right place.
+                If you are in debt and want to get out of debt, <em>vested</em> is right for you. If you are debt–free and want to save up for something important, you are in the right place.
               </p>
             </div>
           </div>
@@ -110,7 +110,6 @@
             <div class="card-body">
               <p>
                 To protect your financial security and privacy, <em>vested</em> uses the same level of security as your bank. We never have access to money in your account or confidential information such as full credit card, account or routing numbers, and we will not share or sell your data to anyone for any reason. <br/>
-                <a class="spacing-top" href="security" target="_blank" style="color: #7EA6F4;">Learn more about security.</a>
               </p>
             </div>
           </div>
@@ -127,7 +126,7 @@
           <div id="collapseSix" class="collapse" aria-labelledby="headingSix" data-parent="#accordionExample">
             <div class="card-body">
               <p>
-                Joint or spouse accounts are still your assets. So if you and your significant other have a joint account and one of you adds $500 that you were not expecting, that’s good news for your goal. You are also penalized if one of you withdraws without you expecting it.
+                Joint or spouse accounts are still your assets. So if you and your significant other have a joint account and one of you adds $500 that you were not expecting, that’s good news for your goal.
               </p>
             </div>
           </div>
@@ -156,7 +155,7 @@
   <div class="spacing-top">
     <div class="divider"></div>
     <div class="py-3">
-      <span style="font-size: 12px; opacity: 0.5;">©2019 <em>vested</em><sup-v>TM</sup-v> All rights reserved.</span>
+      <span style="font-size: 12px; opacity: 0.5;">©2019 <em>vested</em> All rights reserved.</span>
     </div>
   </div>
 </div>
