--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Simple savings goals">
-    <meta name="keywords" content="financial savings, wellness, investment, save money, savings goal, savings plan">
+    <meta name="keywords" content="financial savings, wellness, investment, save money, savings goal, savings plan, mint, copilot">
+    <meta name="apple-itunes-app" content="app-id=1509968544, affiliate-data=myAffiliateData, app-argument=myURL">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -25,7 +26,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ml-auto">
-            <a class="nav-item nav-link" href="#">Get the app<span class="sr-only">(current)</span></a>
+            <div class="nav-item" style="margin-top:10px">
+              <a href="https://www.instagram.com/vestedapp/" target="_blank"><img src="https://vested-app.s3.amazonaws.com/IG_Glyph.png" alt="Lamp" height="22px" style="opacity: 0.8; margin-bottom: 20px; padding-right: 10px;"></a>
+            </div>
+            <a class="nav-item nav-link" href="https://apps.apple.com/us/app/vested-savings-goals-finance/id1509968544" target="_blank">Get the app<span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link" href="mailto:team@vestedapp.com?subject=Hi, vested team">Contact</a>
             <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true">News</a>
           </div>
@@ -36,7 +40,7 @@
         <h1>Your savings on autopilot.</h1>
         <p class="d-none d-md-block" style="padding-top: 0.8rem">Simple savings goals to get you where you need to be.</p>
         <p class="d-md-none d-lg-none d-xl-none" style="padding-top: 0.8rem">Simple savings goals to get you <br/> where you need to be.</p>
-        <a href="#"><img style="margin-top: 2rem" src="https://vested-app.s3.amazonaws.com/badge-bk.png" alt="Lamp" height="54"></a>
+        <a href="https://apps.apple.com/us/app/vested-savings-goals-finance/id1509968544" target="_blank"><img style="margin-top: 2rem" src="https://vested-app.s3.amazonaws.com/badge-bk.png" alt="Lamp" height="54"></a>
         <a href="#" data-toggle="modal" data-target="#androidPopup">
           <p class="android">I HAVE AN ANDROID DEVICE</p>
         </a>
@@ -60,7 +64,7 @@
             </button>
           </div>
           <div class="modal-body">
-            Interested in an Android app? Thanks for letting us know! <br/><br/> <strong>We're on it.</strong>
+            Looking for the Android app? Thanks for letting us know! <br/><br/> <strong>We're on it.</strong>
           </div>
         </div>
       </div>
