--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <meta name="keywords" content="financial savings, wellness, investment, save money, savings goal, savings plan, mint, copilot">
     <meta name="apple-itunes-app" content="app-id=1509968544, affiliate-data=myAffiliateData, app-argument=myURL">
 
+    <!-- Open graph card data: linkedin etc. -->
+    <meta property="og:url" content="https://vestedapp.com/" />
+    <meta property="og:title" content="Simple savings goals" />
+    <meta property="og:description" content="Set and reach your financial goals" />
+    <meta property="og:image" content="https://vested-app.s3.amazonaws.com/hero.png" />
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
