--- a/new.html
+++ b/new.html
@@ -57,8 +57,8 @@
       </div>
     </div>
     <div class="row center spacing-top">
-      <p class="center d-none d-md-block" style="max-width:60%;">Designed like a fitness tracker, but for your money&mdash;vested makes saving as encouraging as closing monthly loops. Let vested figure out what you can pocket each month, and then hold you to it.</p>
-      <p class="center d-md-none d-lg-none d-xl-none" style="max-width:86%; font-size: 1.1rem; padding-top: 22px;">Designed like a fitness tracker, but for your money&mdash;vested makes saving as encouraging as closing monthly loops. Let vested figure out what you can pocket each month, and then hold you to it.</p>
+      <p class="center d-none d-md-block" style="max-width:60%;">Designed like a fitness tracker, but for money&mdash;vested makes saving as encouraging as closing your monthly loops. Let vested figure out what you can pocket each month, then hold you to it.</p>
+      <p class="center d-md-none d-lg-none d-xl-none" style="max-width:86%; font-size: 1.1rem; padding-top: 22px;">Designed like a fitness tracker, but for money&mdash;vested makes saving as encouraging as closing your monthly loops. Let vested figure out what you can pocket each month, then hold you to it.</p>
     </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
