--- a/new.html
+++ b/new.html
@@ -46,8 +46,8 @@
         <h1>Your savings on autopilot.</h1>
         <h4 class="d-none d-md-block" style="padding-top: 0.8rem">Simple savings goals to get you where you need to be.</h4>
         <h4 class="d-md-none d-lg-none d-xl-none" style="padding-top: 0.8rem">Simple savings goals to get you where you need to be.</h4>
-        <a href="https://apps.apple.com/us/app/vested-savings-goals-finance/id1509968544" target="_blank"><img style="margin-top: 2rem" src="https://vested-app.s3.amazonaws.com/badge-bk.png" alt="Lamp" height="54"></a>
-        <p class="android">FREE TWO MONTH TRIAL</p>
+        <a href="https://apps.apple.com/us/app/vested-savings-goals-finance/id1509968544" target="_blank"><img style="margin-top: 1.4rem" src="https://vested-app.s3.amazonaws.com/badge-bk.png" alt="Lamp" height="54"></a>
+        <p class="trial">FREE TWO MONTH TRIAL</p>
       </div>
       <div class="row d-none d-md-block center spacing-top">
         <img class="hero" src="https://vested-app.s3.amazonaws.com/hero.png" alt="Lamp" height="350px">
@@ -60,6 +60,7 @@
       <p class="center d-none d-md-block" style="max-width:60%;">Designed like a fitness tracker, but for money&mdash;vested makes saving as encouraging as closing your monthly loops. Let vested figure out what you can pocket each month, then hold you to it.</p>
       <p class="center d-md-none d-lg-none d-xl-none" style="max-width:86%; font-size: 1.1rem; padding-top: 22px;">Designed like a fitness tracker, but for money&mdash;vested makes saving as encouraging as closing your monthly loops. Let vested figure out what you can pocket each month, then hold you to it.</p>
     </div>
+    <footer class="spacing-top"></footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
