--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-T63QDC25S4"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-T63QDC25S4');
+    </script>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -25,7 +34,7 @@
   </head>
   <body>
     <div class="container">
-      <nav class="navbar navbar-expand-lg navbar-light" style="padding-top: 25px;">
+      <nav class="navbar navbar-expand-lg navbar-light" style="padding-top: 15px;">
         <a class="navbar-brand" href="#"><img src="https://vested-app.s3.amazonaws.com/logo-pk.png" alt="Lamp" height="36" style="padding-bottom: 8px"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -44,12 +53,10 @@
 
       <div class="row center spacing-top">
         <h1>Your savings on autopilot.</h1>
-        <p class="d-none d-md-block" style="padding-top: 0.8rem">Simple savings goals to get you where you need to be.</p>
-        <p class="d-md-none d-lg-none d-xl-none" style="padding-top: 0.8rem">Simple savings goals to get you <br/> where you need to be.</p>
-        <a href="https://apps.apple.com/us/app/vested-savings-goals-finance/id1509968544" target="_blank"><img style="margin-top: 2rem" src="https://vested-app.s3.amazonaws.com/badge-bk.png" alt="Lamp" height="54"></a>
-        <a href="#" data-toggle="modal" data-target="#androidPopup">
-          <p class="android">I HAVE AN ANDROID DEVICE</p>
-        </a>
+        <h4 class="d-none d-md-block" style="padding-top: 0.8rem">Simple savings goals to get you where you need to be.</h4>
+        <h4 class="d-md-none d-lg-none d-xl-none" style="padding-top: 0.8rem">Simple savings goals to get you where you need to be.</h4>
+        <a href="https://apps.apple.com/us/app/vested-savings-goals-finance/id1509968544" target="_blank"><img style="margin-top: 1.4rem" src="https://vested-app.s3.amazonaws.com/badge-bk.png" alt="Lamp" height="54"></a>
+        <p class="trial">FREE TWO MONTH TRIAL</p>
       </div>
       <div class="row d-none d-md-block center spacing-top">
         <img class="hero" src="https://vested-app.s3.amazonaws.com/hero.png" alt="Lamp" height="350px">
@@ -58,23 +65,11 @@
         <img class="hero" src="https://vested-app.s3.amazonaws.com/hero-sm.png" alt="Lamp" height="250px">
       </div>
     </div>
-
-    <!-- Modal -->
-    <div class="modal fade" id="androidPopup" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Android Device</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            Looking for the Android app? Thanks for letting us know! <br/><br/> <strong>We're on it.</strong>
-          </div>
-        </div>
-      </div>
+    <div class="row center spacing-top">
+      <p class="center d-none d-md-block" style="max-width:60%;">Designed like a fitness tracker, but for money&mdash;vested makes saving as encouraging as closing your monthly loops. Let vested figure out what you can pocket each month, then hold you to it.</p>
+      <p class="center d-md-none d-lg-none d-xl-none" style="max-width:86%; font-size: 1.1rem; padding-top: 22px;">Designed like a fitness tracker, but for money&mdash;vested makes saving as encouraging as closing your monthly loops. Let vested figure out what you can pocket each month, then hold you to it.</p>
     </div>
+    <footer class="spacing-top"></footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
