--- a/promolist.html
+++ b/promolist.html
@@ -17,6 +17,9 @@
     <meta name="keywords" content="financial savings, wellness, investment, save money, savings goal, savings plan, mint, copilot">
     <meta name="apple-itunes-app" content="app-id=1509968544, affiliate-data=myAffiliateData, app-argument=myURL">
 
+    <!-- Email waitlist capture -->
+    <script src="https://getlaunchlist.com/js/widget.js" defer></script>
+
     <!-- Open graph card data: linkedin etc. -->
     <meta property="og:url" content="https://vestedapp.com/" />
     <meta property="og:title" content="Simple savings goals" />
@@ -52,23 +55,47 @@
       </nav>
 
       <div class="row center spacing-top">
-        <h1>Your savings on autopilot.</h1>
-        <h4 class="d-none d-md-block" style="padding-top: 0.8rem">Simple savings goals to get you where you need to be.</h4>
-        <h4 class="d-md-none d-lg-none d-xl-none" style="padding-top: 0.8rem">Simple savings goals to get you where you need to be.</h4>
-        <a href="https://apps.apple.com/us/app/vested-savings-goals-finance/id1509968544" target="_blank"><img class="BigButton" style="margin-top: 1.4rem" src="https://vested-app.s3.amazonaws.com/badge-bk.png" alt="Lamp" height="54"></a>
-        <p class="trial">FREE TWO MONTH TRIAL</p>
+        <h1>Gimme the savings!</h1>
+        <h4 class="d-none d-md-block" style="padding-top: 0.8rem">Add your email and we'll send over a promo code for a four-month free trial!</h4>
+        <h4 class="d-md-none d-lg-none d-xl-none" style="padding-top: 0.8rem">Add your email and we'll send over a promo code for a 4-month free trial!</h4>
+        <div class="launchlist-widget spacing-top" data-key-id="moefeZ" data-height="180px"></div>
+        <p class="trial">The only time we'll email is to give your free code - and to follow up after your trial for app feedback.</p>
       </div>
-      <div class="row d-none d-md-block center spacing-top">
-        <img class="hero" src="https://vested-app.s3.amazonaws.com/hero.png" alt="Lamp" height="350px">
-      </div>
-      <div class="row d-md-none d-lg-none d-xl-none center spacing-top">
-        <img class="hero" src="https://vested-app.s3.amazonaws.com/hero-sm.png" alt="Lamp" height="250px">
-      </div>
+
+      <div class="divider" style="opacity: 0.1"></div>
 
       <div class="row center spacing-top">
         <p class="center d-none d-md-block" style="max-width:60%;">Designed like a fitness tracker, but for money&mdash;vested makes saving as encouraging as closing your monthly loops. Let vested figure out what you can pocket each month, then hold you to it.</p>
         <p class="center d-md-none d-lg-none d-xl-none" style="max-width:86%; font-size: 1.1rem; padding-top: 22px;">Designed like a fitness tracker, but for money&mdash;vested makes saving as encouraging as closing your monthly loops. Let vested figure out what you can pocket each month, then hold you to it.</p>
       </div>
+    </div>
+
+    <div style="margin-top:4.5rem;"></div>
+    <div class="divider" style="opacity: 0.1"></div>
+
+    <div class="container" style="padding-left: 10%;">
+      <div class="row" style="margin-top:4.5rem; opacity:0.7;">
+        <ul class="col">
+          <li class="font-bold"><b>Company</b></li>
+          <li><a class="font-grey" href="about">About</a></li>
+          <li><a class="font-grey" href="cases">News</a></li>
+        </ul>
+        <ul class="col">
+          <li class="font-bold"><b>Support</b></li>
+          <li><a class="font-grey" href="mailto:team@getvestedapp.com?subject=Hello, vested team!">Contact us</a></li>
+          <li><a class="font-grey" href="faq">FAQ</a></li>
+        </ul>
+        <ul class="col">
+          <li class="font-bold"><b>Terms and Privacy</b></li>
+          <li><a class="font-grey" href="terms">Terms</a></li>
+          <li><a class="font-grey" href="privacy">Privacy</a></li>
+        </ul>
+      </div>
+
+      <div style="font-size: 12px; opacity: 0.7; text-align: left;">©2022 <b>vested</b> <em>savings goals & finance</em>. All rights reserved.</div>
+      <!-- <div style="font-size: 8px; opacity: 0.7; text-align: left;">
+        Sources: 1. PricewaterhouseCoopers, Employee Financial Wellness Survey, 2018; 2. PricewaterhouseCoopers, Employee Financial Wellness Survey, 2017; Creative Commons copywright attribution to <u><a href="https://www.pablostanley.com" class="font-grey">Pablo Stanley</a></u> for human illustrations.
+      </div> -->
     </div>
 
     <footer class="spacing-top"></footer>
