--- a/promo.html
+++ b/promo.html
@@ -82,7 +82,7 @@
         </ul>
         <ul class="col">
           <li class="font-bold"><b>Support</b></li>
-          <li><a class="font-grey" href="mailto:team@getvestedapp.com?subject=Hello, vested team!">Contact us</a></li>
+          <li><a class="font-grey" href="mailto:team@vestedapp.com?subject=Hello, vested team!">Contact us</a></li>
           <li><a class="font-grey" href="faq">FAQ</a></li>
         </ul>
         <ul class="col">
