--- a/promo.html
+++ b/promo.html
@@ -56,10 +56,10 @@
 
       <div class="row center spacing-top">
         <h1>Gimme the savings!</h1>
-        <h4 class="d-none d-md-block" style="padding-top: 0.8rem">Add your email and we'll send over a promo code for a four-month free trial!</h4>
-        <h4 class="d-md-none d-lg-none d-xl-none" style="padding-top: 0.8rem">Add your email and we'll send a promo code for a 4-month free trial!</h4>
+        <h4 class="d-none d-md-block" style="padding-top: 0.8rem">Add your email and we will send over a promo code for a four-month free trial!</h4>
+        <h4 class="d-md-none d-lg-none d-xl-none" style="padding-top: 0.8rem">Add your email and we will send over a promo code for a 4-month free trial!</h4>
         <div class="launchlist-widget spacing-top" data-key-id="moefeZ" data-height="180px"></div>
-        <p class="trial">The only time we'll email is to give your free code - and to follow up after your trial for app feedback.</p>
+        <p class="trial">The only time we'll email is to give you your free code - and to follow up after your trial for app feedback.</p>
       </div>
 
       <div class="divider" style="opacity: 0.1"></div>
