--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
       <div class="row center spacing-top">
         <p class="center d-none d-md-block" style="max-width:60%;">Designed like a fitness tracker, but for money&mdash;vested makes saving as encouraging as closing your monthly loops. Let vested figure out what you can pocket each month, then hold you to it.</p>
-        <p class="center d-md-none d-lg-none d-xl-none" style="max-width:86%; font-size: 1.1rem; padding-top: 22px;">Designed like a fitness tracker, but for money&mdash;vested makes saving as encouraging as closing your monthly loops. Let vested figure out what you can pocket each month, then hold you to it.</p>
+        <p class="center d-md-none d-lg-none d-xl-none" style="max-width:86%; font-size: 1.1rem; padding-top: 22px; text-align: left;">Designed like a fitness tracker, but for money&mdash;vested makes saving as encouraging as closing your monthly loops. Let vested figure out what you can pocket each month, then hold you to it.</p>
       </div>
     </div>
 
