--- a/media.html
+++ b/media.html
@@ -56,7 +56,7 @@
         <h4 class="d-none d-md-block" style="padding-top: 0.8rem">Simple savings goals to get you where you need to be.</h4>
         <h4 class="d-md-none d-lg-none d-xl-none" style="padding-top: 0.8rem">Simple savings goals to get you where you need to be.</h4>
         <div class="spacing-top"></div>
-        <button href="https://vested-app.s3.amazonaws.com/media.zip" target="_blank" type="button" class="BigButton btn btn-dark">Click to download</button>
+        <a href="https://vested-app.s3.amazonaws.com/media.zip" role="button" class="BigButton btn btn-dark">Click to download</a>
         <a href="href="mailto:contact@vestedapp.com?subject=Hi, vested media team""><p class="trial">Contact us for more.</p></a>
       </div>
 
@@ -64,6 +64,38 @@
         <p class="center d-none d-md-block" style="max-width:60%;">Designed like a fitness tracker, but for money&mdash;vested makes saving as encouraging as closing your monthly loops. Let vested figure out what you can pocket each month, then hold you to it.</p>
         <p class="center d-md-none d-lg-none d-xl-none" style="max-width:86%; font-size: 1.1rem; padding-top: 22px; text-align: left;">Designed like a fitness tracker, but for money&mdash;vested makes saving as encouraging as closing your monthly loops. Let vested figure out what you can pocket each month, then hold you to it.</p>
       </div>
+    </div>
+
+    <div style="margin-top:4.5rem;"></div>
+    <div class="divider" style="opacity: 0.1"></div>
+
+    <div class="container" style="padding-left: 10%;">
+      <div class="row" style="opacity:0.7;">
+        <ul class="col">
+          <li class="font-bold"><b>Company</b></li>
+          <li><a class="font-grey" href="cases">News</a></li>
+          <li><a class="font-grey" href="media">Press kit</a></li>
+        </ul>
+        <ul class="col">
+          <li class="font-bold"><b>Support</b></li>
+          <li><a class="font-grey" href="mailto:team@vestedapp.com?subject=Hello, vested team!">Contact us</a></li>
+          <li><a class="font-grey" href="faq">FAQ</a></li>
+        </ul>
+        <ul class="col">
+          <li class="font-bold"><b>Terms and Privacy</b></li>
+          <li><a class="font-grey" href="terms">Terms</a></li>
+          <li><a class="font-grey" href="privacy">Privacy</a></li>
+        </ul>
+        <ul class="col">
+          <li class="font-bold"><b>Social</b></li>
+          <li><a class="font-grey" href="https://instagram.com/vestedapp" target="_blank">Instagram</a></li>
+          <li><a class="font-grey" href="https://twitter.com/vestedapp" target="_blank">Twitter</a></li>
+          <li><a class="font-grey" href="https://facebook.com/vestedapp" target="_blank">Facebook</a></li>
+        </ul>
+      </div>
+
+      <div style="font-size: 12px; opacity: 0.7; text-align: left;">©2022 <b>vested</b> <em>savings goals & finance</em>.</div>
+      <div style="font-size: 10px; opacity: 0.7; text-align: left;">All rights reserved.</div>
     </div>
 
     <footer class="spacing-top"></footer>
