--- a/cases.html
+++ b/cases.html
@@ -51,7 +51,7 @@
         </div>
       </nav>
 
-      <h1 class="spacing-top">In the news</h1>
+      <h1 class="spacing-top">In the news.</h1>
       <div class="card-columns mx-auto spacing-top">
 
         <div class="card" style="width: 18rem;">
