--- a/cases.html
+++ b/cases.html
@@ -163,5 +163,48 @@
         </div>
       </div>
     </div>
+    <div style="margin-top:4.5rem;"></div>
+    <div class="divider" style="opacity: 0.1"></div>
+
+    <div class="container">
+      <div class="row" style="opacity:0.7;">
+        <ul class="col d-none d-md-block" style="margin-left:18%";>
+          <li class="font-bold"><b>Company</b></li>
+          <li><a href="cases">News</a></li>
+          <li><a href="media">Press kit</a></li>
+          <li><a href="faq">FAQ</a></li>
+        </ul>
+        <ul class="col d-md-none d-lg-none d-xl-none">
+          <li class="font-bold"><b>Company</b></li>
+          <li><a href="cases">News</a></li>
+          <li><a href="media">Press kit</a></li>
+          <li><a href="faq">FAQ</a></li>
+        </ul>
+        <ul class="col">
+          <li class="font-bold"><b>Support</b></li>
+          <li><a href="mailto:team@vestedapp.com?subject=Hello, vested team!">Contact us</a></li>
+          <li><a href="terms">Terms</a></li>
+          <li><a href="privacy">Privacy</a></li>
+        </ul>
+        <ul class="col">
+          <li class="font-bold"><b>Social</b></li>
+          <li><a href="https://instagram.com/vestedapp" target="_blank">Instagram</a></li>
+          <li><a href="https://twitter.com/vestedapp" target="_blank">Twitter</a></li>
+          <li><a href="https://facebook.com/vestedapp" target="_blank">Facebook</a></li>
+        </ul>
+      </div>
+
+      <div class="d-none d-md-block" style="margin-left: 18%;">
+        <div style="font-size: 12px; opacity: 0.7; text-align: left;">©2022 <b>vested</b> <em>savings goals & finance</em>.</div>
+        <div style="font-size: 10px; opacity: 0.7; text-align: left;">All rights reserved.</div>
+      </div>
+      <div class="d-md-none d-lg-none d-xl-none">
+        <div style="font-size: 12px; opacity: 0.7; text-align: left;">©2022 <b>vested</b> <em>savings goals & finance</em>.</div>
+        <div style="font-size: 10px; opacity: 0.7; text-align: left;">All rights reserved.</div>
+      </div>
+
+    </div>
+
+    <footer class="spacing-top"></footer>
   </body>
 </html>
