--- a/media.html
+++ b/media.html
@@ -46,7 +46,7 @@
             </div>
             <a class="nav-item nav-link" href="https://apps.apple.com/us/app/vested-savings-goals-finance/id1509968544" target="_blank">Get the app<span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link" href="mailto:team@vestedapp.com?subject=Hi, vested team">Contact</a>
-            <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true">News</a>
+            <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true">What's new</a>
           </div>
         </div>
       </nav>
@@ -63,7 +63,7 @@
         <div style="margin-top:4.5rem;"></div>
 
         <!-- The text field -->
-        <span>App Store direct link:  </span>
+        <span>App Store direct URL:  </span>
         <input type="text" value="https://apple.co/3wlGnbT" id="myInput" style="margin-left:10px;">
         <!-- The button used to copy the text -->
         <button onclick="myFunction()" class="btn btn-outline-info btn-sm"> <svg class="icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="20" height="20" viewBox="0 0 24 24"><path d="M17,9H7V7H17M17,13H7V11H17M14,17H7V15H14M12,3A1,1 0 0,1 13,4A1,1 0 0,1 12,5A1,1 0 0,1 11,4A1,1 0 0,1 12,3M19,3H14.82C14.4,1.84 13.3,1 12,1C10.7,1 9.6,1.84 9.18,3H5A2,2 0 0,0 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5A2,2 0 0,0 19,3Z" /></svg> </button>
@@ -83,31 +83,41 @@
 
     <div class="container">
       <div class="row" style="opacity:0.7;">
-        <ul class="col">
+        <ul class="col d-none d-md-block" style="margin-left:18%";>
           <li class="font-bold"><b>Company</b></li>
-          <li><a class="font-grey" href="cases">News</a></li>
-          <li><a class="font-grey" href="media">Press kit</a></li>
+          <li><a href="cases">News</a></li>
+          <li><a href="media">Press kit</a></li>
+          <li><a href="faq">FAQ</a></li>
+        </ul>
+        <ul class="col d-md-none d-lg-none d-xl-none">
+          <li class="font-bold"><b>Company</b></li>
+          <li><a href="cases">News</a></li>
+          <li><a href="media">Press kit</a></li>
+          <li><a href="faq">FAQ</a></li>
         </ul>
         <ul class="col">
           <li class="font-bold"><b>Support</b></li>
-          <li><a class="font-grey" href="mailto:team@vestedapp.com?subject=Hello, vested team!">Contact us</a></li>
-          <li><a class="font-grey" href="faq">FAQ</a></li>
-        </ul>
-        <ul class="col">
-          <li class="font-bold"><b>Terms and Privacy</b></li>
-          <li><a class="font-grey" href="terms">Terms</a></li>
-          <li><a class="font-grey" href="privacy">Privacy</a></li>
+          <li><a href="mailto:team@vestedapp.com?subject=Hello, vested team!">Contact us</a></li>
+          <li><a href="terms">Terms</a></li>
+          <li><a href="privacy">Privacy</a></li>
         </ul>
         <ul class="col">
           <li class="font-bold"><b>Social</b></li>
-          <li><a class="font-grey" href="https://instagram.com/vestedapp" target="_blank">Instagram</a></li>
-          <li><a class="font-grey" href="https://twitter.com/vestedapp" target="_blank">Twitter</a></li>
-          <li><a class="font-grey" href="https://facebook.com/vestedapp" target="_blank">Facebook</a></li>
+          <li><a href="https://instagram.com/vestedapp" target="_blank">Instagram</a></li>
+          <li><a href="https://twitter.com/vestedapp" target="_blank">Twitter</a></li>
+          <li><a href="https://facebook.com/vestedapp" target="_blank">Facebook</a></li>
         </ul>
       </div>
 
-      <div style="font-size: 12px; opacity: 0.7; text-align: left;">©2022 <b>vested</b> <em>savings goals & finance</em>.</div>
-      <div style="font-size: 10px; opacity: 0.7; text-align: left;">All rights reserved.</div>
+      <div class="d-none d-md-block" style="margin-left: 18%;">
+        <div style="font-size: 12px; opacity: 0.7; text-align: left;">©2022 <b>vested</b> <em>savings goals & finance</em>.</div>
+        <div style="font-size: 10px; opacity: 0.7; text-align: left;">All rights reserved.</div>
+      </div>
+      <div class="d-md-none d-lg-none d-xl-none">
+        <div style="font-size: 12px; opacity: 0.7; text-align: left;">©2022 <b>vested</b> <em>savings goals & finance</em>.</div>
+        <div style="font-size: 10px; opacity: 0.7; text-align: left;">All rights reserved.</div>
+      </div>
+
     </div>
 
     <footer class="spacing-top"></footer>
