--- a/faq.html
+++ b/faq.html
@@ -182,7 +182,7 @@
     </div>
 
     <div style="margin-top:4.5rem;"></div>
-    <div class="divider" style="opacity: 0.1"></div>
+    <div class="divider"></div>
 
     <div class="container">
       <div style="font-size: 12px; opacity: 0.7; text-align: left;">©2022 <b>vested</b> <em>savings goals & finance</em>.</div>
