--- a/privacy.html
+++ b/privacy.html
@@ -105,13 +105,16 @@
     If you have any questions or concerns about this Policy, please contact us at: team@vestedapp.com
   </p>
 
-  <div class="spacing-top">
-    <div class="divider"></div>
+  <div style="margin-top:4.5rem;"></div>
+  <div class="divider"></div>
 
-		<div class="py-3">
-			<span style="font-size: 12px; opacity: 0.5;">©2019 <em>vested</em> All rights reserved.</span>
-		</div>
-	</div>
+  <div class="container">
+    <div style="font-size: 12px; opacity: 0.7; text-align: left;">©2022 <b>vested</b> <em>savings goals & finance</em>.</div>
+    <div style="font-size: 10px; opacity: 0.7; text-align: left;">All rights reserved.</div>
+  </div>
+
+  <footer class="spacing-top"></footer>
+
 </div>
 
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
