--- a/terms.html
+++ b/terms.html
@@ -172,13 +172,15 @@
 	<p>Also, these Terms are specific to the relationship between you and <em>vested</em>, so you may not transfer any part of the agreement between you and <em>vested</em> to anyone else, or assign any part of your relationship with <em>vested</em> to another person or organization. If, at some point, we fail to enforce any part of these Terms, that does not mean we waive our rights to enforce these Terms in the future. If we decide to make a special exception and waive your obligation to follow any part of these Terms, we will notify you in writing.</p>
 	<p>Finally, sometimes we may need to change these Terms. For example, we might need to make changes if we add a new feature to <em>vested</em>. We will notify you by changing the revision date at the top of this page, and in some cases we will notify you directly, by email or by in-app notification. Your continued use of <em>vested</em> after a modification signifies your agreement to the modification. We encourage you to review frequently these Terms to ensure that you understand the terms and conditions that apply to your use of <em>vested</em>. We will always be happy to answer any questions about these changes, and you can get in touch at team@vestedapp.com.</p>
 
-  <div class="spacing-top">
-    <div class="divider"></div>
+  <div style="margin-top:4.5rem;"></div>
+  <div class="divider"></div>
 
-		<div class="py-3">
-			<span style="font-size: 12px; opacity: 0.5;">©2019 <em>vested</em> All rights reserved.</span>
-		</div>
-	</div>
+  <div class="container">
+    <div style="font-size: 12px; opacity: 0.7; text-align: left;">©2022 <b>vested</b> <em>savings goals & finance</em>.</div>
+    <div style="font-size: 10px; opacity: 0.7; text-align: left;">All rights reserved.</div>
+  </div>
+
+  <footer class="spacing-top"></footer>
 </div>
 
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
