--- a/media.html
+++ b/media.html
@@ -79,18 +79,20 @@
     </div>
 
     <div style="margin-top:4.5rem;"></div>
-    <div class="divider" style="opacity: 0.1"></div>
+    <div class="divider"></div>
 
     <div class="container">
       <div class="row" style="opacity:0.7;">
-        <ul class="col d-none d-md-block" style="margin-left:18%";>
+        <ul class="col d-none d-md-block" style="margin-left:18%;">
           <li class="font-bold"><b>Company</b></li>
+          <li><a href="/">Home</a></li>
           <li><a href="cases">News</a></li>
           <li><a href="media">Press kit</a></li>
           <li><a href="faq">FAQ</a></li>
         </ul>
         <ul class="col d-md-none d-lg-none d-xl-none">
           <li class="font-bold"><b>Company</b></li>
+          <li><a href="/">Home</a></li>
           <li><a href="cases">News</a></li>
           <li><a href="media">Press kit</a></li>
           <li><a href="faq">FAQ</a></li>
