--- a/promo.html
+++ b/promo.html
@@ -62,7 +62,7 @@
         <p class="trial">The only time we'll email is to give you your free code - and to follow up after your trial for app feedback.</p>
       </div>
 
-      <div class="divider" style="opacity: 0.1"></div>
+      <div class="divider"></div>
 
       <div class="row center spacing-top">
         <p class="center d-none d-md-block" style="max-width:60%;">Designed like a fitness tracker, but for money&mdash;vested makes saving as encouraging as closing your monthly loops. Let vested figure out what you can pocket each month, then hold you to it.</p>
@@ -71,18 +71,20 @@
     </div>
 
     <div style="margin-top:4.5rem;"></div>
-    <div class="divider" style="opacity: 0.1"></div>
+    <div class="divider"></div>
 
     <div class="container">
       <div class="row" style="opacity:0.7;">
-        <ul class="col d-none d-md-block" style="margin-left:18%";>
+        <ul class="col d-none d-md-block" style="margin-left:18%;">
           <li class="font-bold"><b>Company</b></li>
+          <li><a href="/">Home</a></li>
           <li><a href="cases">News</a></li>
           <li><a href="media">Press kit</a></li>
           <li><a href="faq">FAQ</a></li>
         </ul>
         <ul class="col d-md-none d-lg-none d-xl-none">
           <li class="font-bold"><b>Company</b></li>
+          <li><a href="/">Home</a></li>
           <li><a href="cases">News</a></li>
           <li><a href="media">Press kit</a></li>
           <li><a href="faq">FAQ</a></li>
