--- a/media.html
+++ b/media.html
@@ -66,7 +66,12 @@
         <span>App Store direct URL:  </span>
         <input type="text" value="https://apple.co/3wlGnbT" id="myInput" style="margin-left:10px;">
         <!-- The button used to copy the text -->
-        <button onclick="myFunction()" class="btn btn-outline-info btn-sm"> <svg class="icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="20" height="20" viewBox="0 0 24 24"><path d="M17,9H7V7H17M17,13H7V11H17M14,17H7V15H14M12,3A1,1 0 0,1 13,4A1,1 0 0,1 12,5A1,1 0 0,1 11,4A1,1 0 0,1 12,3M19,3H14.82C14.4,1.84 13.3,1 12,1C10.7,1 9.6,1.84 9.18,3H5A2,2 0 0,0 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5A2,2 0 0,0 19,3Z" /></svg> </button>
+        <button onclick="myFunction()" class="btn btn-outline-primary btn-sm"> <svg class="icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="20" height="20" viewBox="0 0 24 24"><path d="M17,9H7V7H17M17,13H7V11H17M14,17H7V15H14M12,3A1,1 0 0,1 13,4A1,1 0 0,1 12,5A1,1 0 0,1 11,4A1,1 0 0,1 12,3M19,3H14.82C14.4,1.84 13.3,1 12,1C10.7,1 9.6,1.84 9.18,3H5A2,2 0 0,0 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5A2,2 0 0,0 19,3Z" /></svg> </button>
+
+        <div style="margin-top:4.5rem;"></div>
+
+        <h3><a class="nav-item nav-link trial" href="mailto:team@vestedapp.com?subject=Hi, vested team">Reach out to us 💌 team@vestedapp.com</a></h3>
+
       </div>
 
     </div>
