--- a/media.html
+++ b/media.html
@@ -70,7 +70,7 @@
 
         <div style="margin-top:4.5rem;"></div>
 
-        <h3><a class="nav-item nav-link trial" href="mailto:team@vestedapp.com?subject=Hi, vested team">Reach out to us 💌 team@vestedapp.com</a></h3>
+        <h3><a class="nav-item nav-link trial BigButton" href="mailto:team@vestedapp.com?subject=Hi, vested team">Reach out to us 💌 team@vestedapp.com</a></h3>
 
       </div>
 
