--- a/faq.html
+++ b/faq.html
@@ -60,7 +60,7 @@
             <div class="card">
               <div class="card-header" id="headingOne">
                 <h2 class="mb-0">
-                  <button class="btn btn-link font-blue" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne" style="text-decoration: none;">
+                  <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne" style="text-decoration: none;">
                     What is vested?
                   </button>
                 </h2>
@@ -77,7 +77,7 @@
             <div class="card">
               <div class="card-header" id="headingTwo">
                 <h2 class="mb-0">
-                  <button class="btn btn-link collapsed font-blue" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo" style="text-decoration: none;">
+                  <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo" style="text-decoration: none;">
                     Is vested right for you?
                   </button>
                 </h2>
@@ -94,7 +94,7 @@
             <div class="card">
               <div class="card-header" id="headingThree">
                 <h2 class="mb-0">
-                  <button class="btn btn-link collapsed font-blue" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree" style="text-decoration: none;">
+                  <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree" style="text-decoration: none;">
                     Is vested a bank?
                   </button>
                 </h2>
@@ -111,7 +111,7 @@
             <div class="card">
               <div class="card-header" id="headingFour">
                 <h2 class="mb-0">
-                  <button class="btn btn-link collapsed font-blue" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour" style="text-decoration: none;">
+                  <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour" style="text-decoration: none;">
                     Where do your savings go?
                   </button>
                 </h2>
@@ -128,7 +128,7 @@
             <div class="card">
               <div class="card-header" id="headingFive">
                 <h2 class="mb-0">
-                  <button class="btn btn-link collapsed font-blue" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive" style="white-space: normal; text-align: left; text-decoration: none;">
+                  <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive" style="white-space: normal; text-align: left; text-decoration: none;">
                     How do we keep your data secure?
                   </button>
                 </h2>
@@ -145,7 +145,7 @@
             <div class="card">
               <div class="card-header" id="headingSix">
                 <h2 class="mb-0">
-                  <button class="btn btn-link collapsed font-blue" type="button" data-toggle="collapse" data-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix" style="white-space: normal; text-align: left; text-decoration: none;">
+                  <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix" style="white-space: normal; text-align: left; text-decoration: none;">
                     What if you share a joint or spouse account?
                   </button>
                 </h2>
@@ -162,7 +162,7 @@
             <div class="card">
               <div class="card-header" id="headingSeven">
                 <h2 class="mb-0">
-                  <button class="btn btn-link collapsed font-blue" type="button" data-toggle="collapse" data-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven" style="text-decoration: none;">
+                  <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven" style="text-decoration: none;">
                     More questions?
                   </button>
                 </h2>
