--- a/promo.html
+++ b/promo.html
@@ -38,7 +38,7 @@
   <body>
     <div class="container">
       <nav class="navbar navbar-expand-lg navbar-light" style="padding-top: 15px;">
-        <a class="navbar-brand" href="#"><img src="https://vested-app.s3.amazonaws.com/logo-pk.png" alt="Lamp" height="36" style="padding-bottom: 8px"></a>
+        <a class="navbar-brand" href="/"><img src="https://vested-app.s3.amazonaws.com/logo-pk.png" alt="Lamp" height="36" style="padding-bottom: 8px"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
